--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./javascript/script.js" defer></script>
     <title>Portifolio christopher</title>
-    
   </head>
 
   <body class="tema">
-    
     <header id="header">
       <div class="container">
         <div class="flex">
           <i id="mode_icon" class="fa-solid fa-moon"></i>
-          <!--icone lua-->
+
+
+<div class="body"></div>
+
+
 
           <nav>
             <ul class="lista">
@@ -39,7 +41,6 @@
               <li><a href="#proj" class="trans">Projetos</a></li>
             </ul>
           </nav>
-
         </div>
       </div>
     </header>
@@ -47,9 +48,17 @@
     <section class="banner"></section>
 
     <main>
-      <section class="habili"></section>
+      <section class="my" id="top">
+        <h1>Sobre mim</h1>
+        <div class="display"></div>
+      </section>
 
-      <section class="studi">
+      <section class="habili" id="sob">
+        <h1>habilidades</h1>
+        <div class="display"></div>
+      </section>
+
+      <section class="studi" id="estud">
         <h1>Academic</h1>
 
         <div class="display">
@@ -64,6 +73,7 @@
               em equipe, sempre buscando aprender e colaborar em novos projetos.
             </p>
           </section>
+
           <iframe
             class="video"
             id="video"
@@ -145,15 +155,21 @@
         </table>
       </section>
 
-      <section class="entregas"></section>
+      <section class="entregas" id="cont">
+        <h1>entregas</h1>
+        <div class="display"></div>
+      </section>
 
-      <section class="projetos"></section>
+      <section class="projetos" id="proj">
+        <h1>habilidades</h1>
+        <div class="display"></div>
+      </section>
     </main>
 
-    <div class="final">
-      <footer>
+    <footer>
+      <div class="final">
         <p>Desenvolvido por Christopher</p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
