--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Document</title>
 </head>
 <body id="tema">
+  <body id="tema">
     
 
     <div class="contencao">
@@ -41,13 +42,13 @@
             <li class="item-menu">
                 <a href="#">
                     <span class="icon"><i class="fa-brands fa-instagram"></i></span>
-                    <span class="txt-link">instagram</span>
+                    <span class="txt-link">Instagram</span>
                 </a>
             </li>
             <li class="item-menu">
                 <a href="#">
                     <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
-                    <span class="txt-link">Linkedin</span>
+                    <span class="txt-link">LinkedIn</span>
                 </a>
             </li>
             <li class="item-menu">
@@ -66,8 +67,6 @@
         
         </div>
 
-
-
 <main class="principal"> 
 
     <article>
@@ -75,9 +74,9 @@
         <header id="header">
                 <nav>
                   <ul class="lista">
-                    <li><a href="#top" class="trans">sobre mim</a></li>
-                    <li><a href="#sob" class="trans">habilidades</a></li>
-                    <li><a href="#estud" class="trans">Meus estudos</a></li>
+                    <li><a href="#top" class="trans">Sobre Mim</a></li>
+                    <li><a href="#sob" class="trans">Habilidades</a></li>
+                    <li><a href="#estud" class="trans">Meus Estudos</a></li>
                     <li><a href="#cont" class="trans">Entregas</a></li>
                     <li><a href="#proj" class="trans">Projetos</a></li>
                   </ul>
@@ -89,21 +88,20 @@
     </article>
 
     <section class="my" id="tema" >
-        <h1 id="top">Sobre mim</h1>
+        <h1 id="top">Sobre Mim</h1>
         <div class="display"></div>
       </section>
 
       <section class="habili" id="tema">
-        <h1 id="sob">habilidades</h1>
+        <h1 id="sob">Habilidades</h1>
         <div class="display"></div>
       </section>
 
-
     <section class="studi" id="tema">
-        <h1 id="estud">Academic</h1>
+        <h1 id="estud">Acadêmico</h1>
 
         <div class="display">
-          <section class="texto"id="tema">
+          <section class="texto" id="tema">
             <p>
               Olá, meu nome é Christopher Willians Silva Couto, sou de São
               Paulo. Tenho um curso técnico em Análise e Desenvolvimento de
@@ -197,12 +195,12 @@
       </section>
 
       <section class="entregas" id="tema" >
-        <h1 id="cont">entregas</h1>
+        <h1 id="cont">Entregas</h1>
         <div class="display"></div>
       </section>
 
       <section class="projetos" id="tema">
-        <h1 id="proj">habilidades</h1>
+        <h1 id="proj">Projetos</h1>
         <div class="display"></div>
       </section>
 
@@ -210,6 +208,8 @@
 
 </main>
 
+</body>
+</html>
 
 </body>
 </html>
