--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
 <main class="principal"> 
 
-    <article>
+    <article id="top">
 
         <header id="header">
                 <nav>
                   <ul class="lista">
-                    <li><a href="#top" class="trans">Sobre Mim</a></li>
+                    <li><a href="#top" class="trans">Home</a></li>
                     <li><a href="#sob" class="trans">Habilidades</a></li>
                     <li><a href="#estud" class="trans">Meus Estudos</a></li>
                     <li><a href="#cont" class="trans">Entregas</a></li>
@@ -86,10 +86,6 @@
           
     </article>
 
-    <section class="my" id="tema" >
-        <h1 id="top">Sobre Mim</h1>
-        <div class="display"></div>
-      </section>
 
       <section class="habili" id="tema">
         <h1 id="sob">Habilidades</h1>
