--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" href="./imagens/icone.png" type="png"/>
+
     <title>ChristopherFifo</title>
   </head>
   <body id="tema">
@@ -58,6 +60,15 @@
             </a>
           </li>
         </ul>
+
+        <div class="lingua">
+          <input class="checkbox" type="checkbox" id="chk">
+          <label class="label" for="chk">
+            <img src="./imagens/brasil.png" class="img">
+            <img src="./imagens/USA.png" class="img">
+            <div class="ball"></div>
+          </label>
+        </div>
 
         <i id="mode_icon" class="fa-solid fa-moon"></i>
       </nav>
