--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
 
     <title>ChristopherFifo</title>
   </head>
-  <body id="tema">
+  <body class="tema">
     <div class="contencao">
-      <nav class="menu-lateral" id="tema">
-        <div class="btn-expandir">
+      <nav class="menu-lateral tema" >
+        <div class="btn-expandir tema">
           <i class="fa-solid fa-user" id="btn-exp"></i>
         </div>
 
         <ul>
-          <li class="item-menu">
+          <li class="item-menu tema">
             <a href="https://github.com/christopherfifo" target="_blank">
               <span class="icon"><i class="fa-brands fa-github"></i></span>
               <span class="txt-link">Github</span>
             </a>
           </li>
-          <li class="item-menu">
+          <li class="item-menu tema">
             <a href="https://www.instagram.com/chriis.will/" target="_blank">
               <span class="icon"><i class="fa-brands fa-instagram"></i></span>
               <span class="txt-link">Instagram</span>
             </a>
           </li>
-          <li class="item-menu">
+          <li class="item-menu tema">
             <a
               href="https://www.linkedin.com/in/christopher-willians/"
               target="_blank"
@@ -53,7 +53,7 @@
               <span class="txt-link">LinkedIn</span>
             </a>
           </li>
-          <li class="item-menu">
+          <li class="item-menu tema">
             <a href="#">
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
               <span class="txt-link">Email</span>
@@ -76,7 +76,7 @@
 
     <main class="principal">
       <article id="top">
-        <header id="header">
+        <header class="tema" id="header">
           <nav>
             <ul class="lista">
               <li><a href="#top" class="trans">Home</a></li>
@@ -91,16 +91,16 @@
         <div class="banner"></div>
       </article>
 
-      <section class="habili" id="tema">
-        <h1 id="sob">Habilidades</h1>
+      <section class="habili tema">
+        <h1 id="sob" class="titulo tema">Habilidades</h1>
         <div class="display"></div>
       </section>
 
-      <section class="studi" id="tema">
-        <h1 id="estud">Acadêmico</h1>
+      <section class="studi tema">
+        <h1 id="estud" class="titulo tema">Acadêmico</h1>
 
         <div class="display">
-          <section class="texto" id="tema">
+          <section class="texto tema" >
             <p>
               Olá, meu nome é Christopher Willians Silva Couto, sou de São
               Paulo. Tenho um curso técnico em Análise e Desenvolvimento de
@@ -193,17 +193,17 @@
         </table>
       </section>
 
-      <section class="entregas" id="tema">
-        <h1 id="cont">Entregas</h1>
+      <section class="entregas tema" >
+        <h1 id="cont" class="titulo tema">Entregas</h1>
         <div class="display"></div>
       </section>
 
-      <section class="projetos" id="tema">
-        <h1 id="proj">Projetos</h1>
+      <section class="projetos tema">
+        <h1 id="proj" class="titulo tema">Projetos</h1>
         <div class="display"></div>
       </section>
 
-      <footer id="tema">
+      <footer>
           <section class="sun">
             <div class="reflection"></div>
           </section>
