--- a/index.html
+++ b/index.html
@@ -88,7 +88,101 @@
           </nav>
         </header>
 
-        <div class="banner"></div>
+
+        <div class="slider">
+
+
+          <div class="list">
+  
+              <div class="item">
+                  <img src="https://i.pinimg.com/736x/e8/2b/db/e82bdb7f02c0920975760013e1403fc7.jpg" alt="">
+  
+                  <div class="content">
+                      <div class="title">MAGIC SLIDER</div>
+                      <div class="type">FLOWER</div>
+                      <div class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                      </div>
+                      <div class="button">
+                          <button><a href="#proj">SEE MORE</a></button>
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="item">
+                  <img src="https://i.pinimg.com/736x/26/d8/14/26d814b0b7bc500fd42ec2c9c96a1b0c.jpg" alt="">
+  
+                  <div class="content">
+                      <div class="title">MAGIC SLIDER</div>
+                      <div class="type">NATURE</div>
+                      <div class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                      </div>
+                      <div class="button">
+                          <button><a href="#cont">SEE MORE</a></button>
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="item">
+                  <img src="https://i.pinimg.com/564x/2f/26/9c/2f269c682c4c733c4aacef96c5085beb.jpg" alt="">
+  
+                  <div class="content">
+                      <div class="title">MAGIC SLIDER</div>
+                      <div class="type">PLANT</div>
+                      <div class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                      </div>
+                      <div class="button">
+                        <button><a href="#cont">SEE MORE</a></button>
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="item">
+                  <img src="https://i.pinimg.com/564x/90/f7/01/90f701eb7f8a27ca2a1cfd3175a4872a.jpg" alt="">
+  
+                  <div class="content">
+                      <div class="title">MAGIC SLIDER</div>
+                      <div class="type">NATURE</div>
+                      <div class="description">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
+                      </div>
+                      <div class="button">
+                        <button><a href="#cont">SEE MORE</a></button>
+                      </div>
+                  </div>
+              </div>
+  
+          </div>
+  
+  
+          <div class="thumbnail">
+  
+              <div class="item">
+                  <img src="https://i.pinimg.com/736x/e8/2b/db/e82bdb7f02c0920975760013e1403fc7.jpg" alt="">
+              </div>
+              <div class="item">
+                  <img src="https://i.pinimg.com/736x/26/d8/14/26d814b0b7bc500fd42ec2c9c96a1b0c.jpg" alt="">
+              </div>
+              <div class="item">
+                  <img src="https://i.pinimg.com/564x/2f/26/9c/2f269c682c4c733c4aacef96c5085beb.jpg" alt="">
+              </div>
+              <div class="item">
+                  <img src="https://i.pinimg.com/564x/90/f7/01/90f701eb7f8a27ca2a1cfd3175a4872a.jpg" alt="">
+              </div>
+  
+          </div>
+  
+  
+          <div class="nextPrevArrows">
+              <button class="prev"> < </button>
+              <button class="next"> > </button>
+          </div>
+  
+  
+      </div>
+
       </article>
 
       <section class="habili tema">
