--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
   
                   <div class="content">
                       <div class="title">MAGIC SLIDER</div>
-                      <div class="type">FLOWER</div>
+                      <div class="type tema">FLOWER</div>
                       <div class="description">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                       </div>
-                      <div class="button">
+                      <div class="button tema">
                           <button><a href="#proj">SEE MORE</a></button>
                       </div>
                   </div>
@@ -114,11 +114,11 @@
   
                   <div class="content">
                       <div class="title">MAGIC SLIDER</div>
-                      <div class="type">NATURE</div>
+                      <div class="type tema">NATURE</div>
                       <div class="description">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                       </div>
-                      <div class="button">
+                      <div class="button tema">
                           <button><a href="#cont">SEE MORE</a></button>
                       </div>
                   </div>
@@ -129,11 +129,11 @@
   
                   <div class="content">
                       <div class="title">MAGIC SLIDER</div>
-                      <div class="type">PLANT</div>
+                      <div class="type tema">PLANT</div>
                       <div class="description">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                       </div>
-                      <div class="button">
+                      <div class="button tema">
                         <button><a href="#cont">SEE MORE</a></button>
                       </div>
                   </div>
@@ -144,11 +144,11 @@
   
                   <div class="content">
                       <div class="title">MAGIC SLIDER</div>
-                      <div class="type">NATURE</div>
+                      <div class="type tema">NATURE</div>
                       <div class="description">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                       </div>
-                      <div class="button">
+                      <div class="button tema">
                         <button><a href="#cont">SEE MORE</a></button>
                       </div>
                   </div>
@@ -175,7 +175,7 @@
           </div>
   
   
-          <div class="nextPrevArrows">
+          <div class="nextPrevArrows tema">
               <button class="prev"> < </button>
               <button class="next"> > </button>
           </div>
@@ -287,14 +287,85 @@
         </table>
       </section>
 
-      <section class="entregas tema" >
-        <h1 id="cont" class="titulo tema">Entregas</h1>
-        <div class="display"></div>
-      </section>
+      <section class="entregas tema" id="proj">
 
-      <section class="projetos tema">
-        <h1 id="proj" class="titulo tema">Projetos</h1>
-        <div class="display"></div>
+        <div class="tab-buttons">
+            <button class="tab-btn active tema" content-id="sites">
+               Front-End
+            </button>
+
+            <button class="tab-btn tema" content-id="back-end">
+                Back-End
+            </button>
+
+            <button class="tab-btn tema" content-id="fullstack">
+                Full-Stack
+            </button>
+
+            <button class="tab-btn tema" content-id="anlise-dados">
+                Análise-Dados
+            </button>
+
+            <button class="tab-btn tema" content-id="ia">
+                IA
+            </button>
+
+        </div>
+
+            <div class="conteudo tema" id="sites">
+                <img src="src/images/home.svg" class="content-img" >
+                <div class="infos">
+                    <h1 class="content-title tema">landing pages e sites</h1>
+                    <p class="content-description tema">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
+                    </p>
+                </div>
+            </div>
+
+            <div class="conteudo tema" id="back-end">
+                <img src="src/images/services.svg" class="content-img" >
+                <div class="infos">
+                    <h1 class="content-title tema">Back-End</h1>
+                    <p class="content-description tema">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
+                    </p>
+                </div>
+            </div>
+
+            <div class="conteudo tema" id="fullstack">
+                <img src="src/images/contacts.svg" class="content-img" >
+                <div class="infos">
+                    <h1 class="content-title tema">Full-Stack</h1>
+                    <p class="content-description tema">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
+                    </p>
+                </div>
+            </div>
+
+            <div class="conteudo tema" id="anlise-dados">
+                <img src="src/images/location.svg" class="content-img" >
+                <div class="infos">
+                    <h1 class="content-title tema">Análise de Dados</h1>
+                    <p class="content-description tema">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
+                    </p>
+                </div>
+            </div>
+
+            <div class="conteudo tema" id="ia">
+                <img src="https://i.pinimg.com/736x/26/d8/14/26d814b0b7bc500fd42ec2c9c96a1b0c.jpg" class="content-img" >
+                <div class="infos">
+                    <h1 class="content-title tema">IA</h1>
+                    <p class="content-description tema">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
+                    </p>
+                </div>
+            </div>
+
+    </section>
+
+      <section class="projetos tema" id="proj">
+        <div class="navegacao"></div>
       </section>
 
       <footer>
