--- a/index.html
+++ b/index.html
@@ -187,15 +187,18 @@
 
       <section class="habili tema">
         <h1 id="sob" class="titulo tema">Habilidades</h1>
-        <div class="display"></div>
+        <div class="espaco">
+        <p class="servico tema">Olá, meu nome é Christopher Willians Silva Couto e sou um desenvolvedor apaixonado por tecnologia. Com cerca de um ano de experiência em programação, tenho me dedicado especialmente às áreas de fullstack, inteligência artificial (IA) e ciência de dados. Meu objetivo é criar soluções inovadoras e eficientes que atendam às necessidades específicas dos clientes, utilizando tecnologias modernas e práticas recomendadas. Estou sempre buscando aprender e evoluir, garantindo que cada projeto seja não apenas funcional, mas também robusto e adaptável às demandas do mercado. Estou à disposição para discutir como podemos colaborar para alcançar seus objetivos tecnológicos de forma eficaz e criativa.</p>
+          <img src="./imagens/chris.jpg" class="img-chris">
+        </div>
       </section>
 
       <section class="studi tema">
         <h1 id="estud" class="titulo tema">Acadêmico</h1>
 
         <div class="display">
-          <section class="texto tema" >
-            <p>
+
+            <p class="texto tema">
               Olá, meu nome é Christopher Willians Silva Couto, sou de São
               Paulo. Tenho um curso técnico em Análise e Desenvolvimento de
               Sistemas e estou cursando uma faculdade no Instituto Federal de
@@ -204,7 +207,7 @@
               e inteligência artificial. Sou uma pessoa curiosa e trabalho bem
               em equipe, sempre buscando aprender e colaborar em novos projetos.
             </p>
-          </section>
+
 
           <iframe
             class="video"
@@ -287,7 +290,7 @@
         </table>
       </section>
 
-      <section class="entregas tema" id="proj">
+      <section class="entregas tema" id="cont">
 
         <div class="tab-buttons">
             <button class="tab-btn active tema" content-id="sites">
@@ -298,12 +301,12 @@
                 Back-End
             </button>
 
-            <button class="tab-btn tema" content-id="fullstack">
-                Full-Stack
+            <button class="tab-btn tema" content-id="banco-dados">
+                Banco de Dados
             </button>
 
-            <button class="tab-btn tema" content-id="anlise-dados">
-                Análise-Dados
+            <button class="tab-btn tema" content-id="ciencia-dados">
+                Ciência de Dados
             </button>
 
             <button class="tab-btn tema" content-id="ia">
@@ -317,8 +320,7 @@
                 <div class="infos">
                     <h1 class="content-title tema">landing pages e sites</h1>
                     <p class="content-description tema">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
-                    </p>
+                      Desenvolver o front-end envolve criar a interface de usuário de uma aplicação web, garantindo uma experiência interativa e amigável para os usuários. Utilizo HTML para estruturar o conteúdo, CSS para estilização visual, e JavaScript para funcionalidades dinâmicas. Com React, uma biblioteca JavaScript moderna, posso criar componentes reutilizáveis que atualizam automaticamente conforme o estado da aplicação muda, oferecendo uma experiência fluida e responsiva aos usuários.                    </p>
                 </div>
             </div>
 
@@ -327,28 +329,25 @@
                 <div class="infos">
                     <h1 class="content-title tema">Back-End</h1>
                     <p class="content-description tema">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
-                    </p>
+                      No desenvolvimento back-end, concentro-me em criar a lógica e o funcionamento da aplicação que roda no servidor. Node.js é minha escolha principal, permitindo construir servidores escaláveis e eficientes com JavaScript. Utilizo TypeScript para adicionar tipagem estática e melhorar a manutenibilidade do código. Com C# e .NET, posso desenvolver aplicações robustas e seguras, integrando facilmente com bancos de dados e serviços externos, garantindo alta performance e segurança.                    </p>
                 </div>
             </div>
 
-            <div class="conteudo tema" id="fullstack">
+            <div class="conteudo tema" id="banco-dados">
                 <img src="src/images/contacts.svg" class="content-img" >
                 <div class="infos">
-                    <h1 class="content-title tema">Full-Stack</h1>
+                    <h1 class="content-title tema">Banco de Dados</h1>
                     <p class="content-description tema">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
-                    </p>
+                      Trabalhar com bancos de dados envolve armazenar, gerenciar e acessar dados de forma eficiente. Para SQL, utilizo MySQL e PostgreSQL, garantindo consistência e integridade dos dados em aplicações transacionais. NoSQL, como MongoDB, é ideal para aplicações que exigem escalabilidade e flexibilidade no modelo de dados, permitindo armazenar dados não estruturados e sem esquema definido, como em aplicações web modernas e em implementações de IA.                    </p>
                 </div>
             </div>
 
-            <div class="conteudo tema" id="anlise-dados">
+            <div class="conteudo tema" id="ciencia-dados">
                 <img src="src/images/location.svg" class="content-img" >
                 <div class="infos">
-                    <h1 class="content-title tema">Análise de Dados</h1>
+                    <h1 class="content-title tema">Ciência de Dados</h1>
                     <p class="content-description tema">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
-                    </p>
+                      Em ciência de dados, utilizo Python para análise, visualização e modelagem de dados. Bibliotecas como Pandas e NumPy são essenciais para manipulação e processamento de grandes conjuntos de dados, enquanto Scikit-Learn e TensorFlow são fundamentais para desenvolver modelos de aprendizado de máquina e IA. Utilizo Jupyter Notebooks para explorar dados de forma interativa e colaborativa, facilitando o desenvolvimento e a documentação de projetos de ciência de dados.                    </p>
                 </div>
             </div>
 
@@ -357,11 +356,14 @@
                 <div class="infos">
                     <h1 class="content-title tema">IA</h1>
                     <p class="content-description tema">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, repellat! Id ab similique velit, molestiae, aliquam illum officiis sit totam rem voluptas magnam, atque dicta magni perferendis recusandae reiciendis necessitatibus! 
-                    </p>
+                      Na implementação de IA, foco em desenvolver algoritmos e modelos que podem aprender e tomar decisões baseadas em dados. Python é minha linguagem principal devido à sua vasta biblioteca de IA e aprendizado de máquina, como TensorFlow e PyTorch. Utilizo técnicas como redes neurais profundas e processamento de linguagem natural para criar sistemas inteligentes que podem automatizar tarefas complexas, melhorar a precisão de previsões e otimizar processos em diversas áreas, desde assistentes virtuais até diagnósticos médicos avançados.                    </p>
                 </div>
             </div>
 
+    </section>
+
+    <section class="favoritos tema">
+      <div class="heart"></div>
     </section>
 
       <section class="projetos tema" id="proj">
