arrumei algumas coisas

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </a>
           </li>
           <li class="item-menu tema">
-            <a href="#">
-              <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-              <span class="txt-link">Email</span>
+            <a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank">
+              <span class="icon"><i class="fa-brands fa-whatsapp"></i></span>
+              <span class="txt-link">Whatsapp</span>
             </a>
           </li>
         </ul>
@@ -129,12 +129,12 @@
   
                   <div class="content">
                       <div class="title">MAGIC SLIDER</div>
-                      <div class="type tema">PLANT</div>
+                      <div class="type tema">PLANTaa</div>
                       <div class="description">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus quis eum consequuntur voluptate quae doloribus distinctio. Possimus, sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aut.
                       </div>
                       <div class="button tema">
-                        <button><a href="#cont">SEE MORE</a></button>
+                        <button><a href="#estud">SEE MORE</a></button>
                       </div>
                   </div>
               </div>
@@ -191,6 +191,25 @@
         <p class="servico tema">Olá, meu nome é Christopher Willians Silva Couto e sou um desenvolvedor apaixonado por tecnologia. Com cerca de um ano de experiência em programação, tenho me dedicado especialmente às áreas de fullstack, inteligência artificial (IA) e ciência de dados. Meu objetivo é criar soluções inovadoras e eficientes que atendam às necessidades específicas dos clientes, utilizando tecnologias modernas e práticas recomendadas. Estou sempre buscando aprender e evoluir, garantindo que cada projeto seja não apenas funcional, mas também robusto e adaptável às demandas do mercado. Estou à disposição para discutir como podemos colaborar para alcançar seus objetivos tecnológicos de forma eficaz e criativa.</p>
           <img src="./imagens/chris.jpg" class="img-chris">
         </div>
+
+          <div class="logos">
+            <div class="peixe">
+              <img class="img-logo" src="./imagens/html.png">
+              <img class="img-logo" src="./imagens/css.png">
+              <img class="img-logo" src="./imagens/javascript.png">
+              <img class="img-logo" src="./imagens/react.png">
+              <img class="img-logo" src="./imagens/typescript.png">
+              <img class="img-logo" src="./imagens/nodejs.png">
+              <img class="img-logo" src="./imagens/python.png">
+              <img class="img-logo" src="./imagens/c.png">
+              <img class="img-logo" src="./imagens/c++.png">
+              <img class="img-logo" src="./imagens/csharp.png">
+              <img class="img-logo" src="./imagens/sql.png">
+              <img class="img-logo" src="./imagens/mysql.png">
+              <img class="img-logo" src="./imagens/nosql.png">
+              <img class="img-logo" src="./imagens/git.png">
+            </div>
+          </div>
       </section>
 
       <section class="studi tema">
@@ -363,11 +382,25 @@
     </section>
 
     <section class="favoritos tema">
+      <h1 class="titulo tema ">Favoritos <i class="fa-solid fa-heart"></i></h1>
       <div class="heart"></div>
     </section>
 
       <section class="projetos tema" id="proj">
-        <div class="navegacao"></div>
+
+        <h1 class="titulo tema">Projetos</h1>
+
+        <nav class="filtro tema"> 
+          <ul>
+            <li class="classe tema presente">Todos</li>
+            <li class="classe tema">Front-End</li>
+            <li class="classe tema">Back-End</li>
+            <li class="classe tema">Full-Stack</li>
+            <li class="classe tema">Ciencia-Dados</li>
+            <li class="classe tema">IA</li>
+          </ul>
+        </nav>
+        <div class="navegacao tema"></div>
       </section>
 
       <footer>
