--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img src="./imagens/gif-bd.gif">
   
                   <div class="content">
-                      <div class="title">ETACIONAMENTO</div>
+                      <div class="title">ESTACIONAMENTO</div>
                       <div class="type tema">BACK-END</div>
                       <div class="description">
                         Sistema desenvolvido em C# que calcula o valor do estacionamento com base nas horas. Permite adicionar, listar, remover e mostrar veículos pelas placas, facilitando a gestão e controle de estacionamento.                      </div>
@@ -139,7 +139,7 @@
               <div class="item">
                 <img src="./imagens/gif-projeto4.gif">
                   <div class="content">
-                      <div class="title">SCORE BANCÁRIO</div>
+                      <div class="title">SCORE BANCO</div>
                       <div class="type tema">IA</div>
                       <div class="description">
                         Inteligência Artificial criada com Python e Jupyter que calcula o score bancário dos clientes e identifica quem tem o maior score, ajudando a determinar os clientes mais promissores.                      </div>
