--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
               <span class="txt-link">Email</span>
             </a>
           </li>
+          <li class="item-menu tema gambi">
+            <a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank">
+              <span class="icon"><i class="fa-brands fa-whatsapp"></i></span>
+              <span class="txt-link">Whatsapp</span>
+            </a>
+          </li>
         </ul>
 
         <div class="lingua">
@@ -79,16 +85,20 @@
         <header class="tema" id="header">
           <nav>
             <ul class="lista">
-              <li><a href="#top" class="trans">Home</a></li>
+              <li><a href="#top" class="trans mobi">Home</a></li>
               <li><a href="#sob" class="trans">Habilidades</a></li>
-              <li><a href="#estud" class="trans">Meus Estudos</a></li>
+              <li><a href="#estud" class="trans">Acadêmico</a></li>
               <li><a href="#cont" class="trans">Entregas</a></li>
               <li><a href="#proj" class="trans">Projetos</a></li>
             </ul>
           </nav>
+
+          <div class="tentativa tema"><i class="fa-solid fa-bars"></i></div>
+
         </header>
 
-        <div class="flutuante"><a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></div>
+        <div class="flutuante jesus"><a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></div>
+        <div class="flutuante amem"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
 
         <div class="slider">
 
